--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="container">
       <div class="jumbotron">
         <h1>Cat vs. Dog</h1>
+          <button class="btn btn-default" id="blackTheme">Black Theme</button>
+          <button class="btn btn-default" id="whiteTheme">White Theme</button>
       </div>
     </div>
     <div class="container">
